--- a/itimes/src/main/resources/dev/application.properties
+++ b/itimes/src/main/resources/dev/application.properties
@@ -1,6 +1,6 @@
 
-server.port=8081
-server.tomcat.basedir=/usr/local/tomcat
+server.port=8080
+#server.tomcat.basedir=/usr/local/tomcat
 
 spring.datasource.url=jdbc:mysql://localhost/itimes_base
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -8,19 +8,22 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 #zookeeper settings
-zookeeper.address=zookeeper://127.0.0.1:2181
-zookeeper.consumer.timeout=20000
-zookeeper.consumer.retries=3
-isCheck=false
+#zookeeper.address=zookeeper://127.0.0.1:2181
+#zookeeper.consumer.timeout=20000
+#zookeeper.consumer.retries=3
+#isCheck=false
 
+#redis
+redis.host=127.0.0.1
+redis.port=6379
 
 endpoints.shutdown.enabled=true
 mybatis.config=mybatis-config.xml
 
-spring.mail.host=smtp.qq.com
+spring.mail.host=smtp.163.com
 spring.mail.port=25
-spring.mail.username=619361578@qq.com
-spring.mail.password=iyihua5613033EWA
+spring.mail.username=service_commerce@163.com
+spring.mail.password=client123456
 
 project.host=timeitem.com
 spring.freemarker.suffix=.html
