--- a/module_base/pom.xml
+++ b/module_base/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>com.iyihua</groupId>
 		<artifactId>root</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
-		<relativePath />
+		<relativePath>../root</relativePath>
 	</parent>
 
 	<artifactId>module_base</artifactId>
