--- a/module_util/pom.xml
+++ b/module_util/pom.xml
@@ -5,6 +5,7 @@
 		<groupId>com.iyihua</groupId>
 		<artifactId>root</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
+		<relativePath>../root</relativePath>
 	</parent>
 	<artifactId>module_util</artifactId>
 	<packaging>jar</packaging>
